@@ -1,3 +1,5 @@
+    * listed fields
+
 2011-08-21  redmodel 0.3
 
     * added SortedSet and SortedSetField
